src/test/ui/wf/wf-in-fn-type-arg.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-type-arg.rs:9:5
   |
LL |     x: fn(MustBeCopy<T>)
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
note: required by `MustBeCopy`
  --> $DIR/wf-in-fn-type-arg.rs:3:1
   |
LL | struct MustBeCopy<T:Copy> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
